# tracing-wide

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  release-plz.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
.zed/: settings.json
integration-test-crate/: Cargo.toml
integration-test-crate/src/: lib.rs
tracing-wide/: Cargo.toml
tracing-wide-macros/: Cargo.toml
tracing-wide-macros/src/: lib.rs
tracing-wide/examples/: catalogue-facet.rs  catalogue-serde.rs  catalogue.rs  instrument.rs  serializable.rs  subscriber-facet.rs  subscriber-serde.rs  subscriber.rs  tags.rs
tracing-wide/examples/output/: catalogue-facet.md  catalogue-serde.md  instrument.md  subscriber-facet.md  subscriber-serde.md  subscriber.md  tags.md
tracing-wide/src/: catalogue.rs  examples.rs  instrument.rs  lib.rs  subscriber.rs
tracing-wide/tests/: catalogue.rs  core.rs  coverage.rs  cross_crate.rs  examples.rs  facet.rs  instrument.rs  serde.rs  subscriber.rs  ui.rs
tracing-wide/tests/common/: mod.rs
tracing-wide/tests/ui/: bare_flag.rs  bare_flag.stderr  event_non_message.rs  event_non_message.stderr  field_named_message.rs  field_named_message.stderr  generic_params.rs  generic_params.stderr  msg_not_string.rs  msg_not_string.stderr  non_field.rs  non_field.stderr  seal.rs  seal.stderr  tag_not_lowercase.rs  tag_not_lowercase.stderr  unknown_level.rs  unknown_level.stderr
