[package]
description = "Procedural macros for tracing-wide: the `#[message]` attribute and `event!` macro."
name = "tracing-wide-macros"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
prettyplease = "0.2"
