[package]
description = "Wide structured events for tokio `tracing`: define a struct per event and emit all observability-relevant fields at one site."
name = "tracing-wide"
readme = "README.md"
# The tests need `integration-test-crate`, a path-only dev-dependency Cargo
# strips on publish — they could never build from the package.
exclude = ["/tests"]

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = [ "std" ]

## Documentation-only: pulls in every dependency and rendering needed to build
## the full rustdoc (currently `document-features`, which renders this list).
## Enabled by docs.rs and `just docs`; never needed by applications or libraries.
docs = ["dep:document-features"]

## Auto-collected per-type catalogue: inventory registration + descriptors. On its
## own the descriptors are plain data; add `serde` and they gain `Serialize`.
##
## Tooling-only feature. Should neither be enabled for applications nor libraries.
catalogue = ["dep:inventory", "std"]

## Facet reflection integration. The `as_facet` hook on `Message` hands a subscriber a
## `facet::Peek` over a live message body — enabled per type by `#[derive(Facet)]` alone
## — for *introspection*: pull fields out by name and filter on an individual field, not
## just on tags. Distinct from `serde`, which forwards the body whole; this pulls it apart.
##
## Unstable: facet is pre-1.0 and every minor is a breaking change, so this feature tracks
## that churn — expect breakage. facet is re-exported as `tracing_wide::facet` so a
## subscriber names `Peek`/`Facet`/the derive through one coherent version.
facet = ["dep:facet", "std"]

## Instrument integration (ambient autocapture): a tracing-subscriber `Layer`
## that captures span field values — i.e. what `tracing::instrument` records —
## and an emit-time join that fills a message's still-`None` `Option` fields by
## name from the current span scope. Only `Option` fields join; a miss is legal
## (`None`). Requires the app's subscriber to be built on
## `tracing_subscriber::registry()` with `instrument::layer()` installed —
## without them, `event!` degrades gracefully (fields stay `None`).
##
## Application-only feature. Should only be enabled for applications, not for libraries.
instrument = ["dep:tracing-subscriber", "std"]

## Serde integration. On its own: the erased-serde hook on `Message` (`as_serialize`)
## that lets a subscriber serialize a live message body without naming its concrete
## type — enabled per type by `#[derive(Serialize)]` alone. Combined with `catalogue`,
## the catalogue descriptors also derive `Serialize` (for dumping to JSON/TOML).
serde = ["dep:serde", "dep:erased-serde", "std"]

## Opt-in std - required for all features beyond core functionality.
std = ["tracing/std"]

## Global subscriber registry + typed `&dyn Message` fan-out that
## runs before the tracing handoff. Without it, `event!` just records to tracing.
##
## Application-only feature. Should only be enabled for applications, not for libraries.
subscriber = ["std"]

[dependencies]
tracing-wide-macros.workspace = true

document-features = { version = "0.2", optional = true }
erased-serde = { version = "0.4", optional = true }
facet = { version = "0.46", optional = true, features = ["reflect"] }
inventory = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["registry", "std"] }

[dev-dependencies]
integration-test-crate = { path = "../integration-test-crate" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
facet-json = "0.46"
facet-yaml = "0.46"
serde_norway = "0.9"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
trybuild = "1.0"
trycmd = "1.2"

[[example]]
name = "catalogue-facet"
required-features = ["catalogue", "facet"]

[[example]]
name = "catalogue-serde"
required-features = ["catalogue", "serde"]

[[example]]
name = "instrument"
required-features = ["instrument", "subscriber"]

[[example]]
name = "subscriber"
required-features = ["subscriber"]

[[example]]
name = "subscriber-facet"
required-features = ["facet", "subscriber"]

[[example]]
name = "subscriber-serde"
required-features = ["subscriber", "serde"]

[[example]]
name = "tags"
required-features = ["subscriber"]

[package.metadata.docs.rs]
features = ["catalogue", "docs", "facet", "instrument", "serde", "std", "subscriber" ]
